--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,23 +19,26 @@ project(ampersand C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 23)
 
-# ----- AMP Hub ---------------------------------------------------------------
+# ----- Voter Simulator -----------------------------------------------------------
 
 add_executable(voter-sim
   src/sim-main.cpp
   src/VoterClient.cpp
+  src/SignalGenerator.cpp
   amp-core/src/EventLoop.cpp
   amp-core/src/VoterUtil.cpp
   amp-core/src/VoterPeer.cpp
   amp-core/src/MultiRouter.cpp
   amp-core/src/Message.cpp
   amp-core/src/ThreadUtil.cpp
+  amp-core/src/Transcoder_G711_ULAW.cpp
   kc1fsz-tools-cpp/src/Common.cpp
   kc1fsz-tools-cpp/src/NetUtils.cpp
   kc1fsz-tools-cpp/src/StdPollTimer.cpp
   kc1fsz-tools-cpp/src/fixed_math.cpp
   kc1fsz-tools-cpp/src/linux/StdClock.cpp
   kc1fsz-tools-cpp/src/linux/MTLog.cpp
+  itu-g711-codec/src/codec.cpp
 )
 target_compile_options(voter-sim PRIVATE -Wall -Wpedantic -g -O3 -mtune=native -ffast-math)
 
@@ -44,4 +47,5 @@ target_include_directories(voter-sim PRIVATE include)
 target_include_directories(voter-sim PRIVATE kc1fsz-tools-cpp/include)
 target_include_directories(voter-sim PRIVATE amp-core/include)
 target_include_directories(voter-sim PRIVATE amp-core/src)
+target_include_directories(voter-sim PRIVATE itu-g711-codec/src)
 
